WebCore/platform/qt/RenderThemeQt.cpp
@@ -397,13 +397,8 @@ void RenderThemeQt::adjustButtonStyle(CSSStyleSelector* selector, RenderStyle* s
     // Ditch the border.
     style->resetBorder();
 
-#ifdef Q_WS_MAC
-    if (style->appearance() == PushButtonPart) {
-        // The Mac ports ignore the specified height for <input type="button"> elements
-        // unless a border and/or background CSS property is also specified.
-        style->setHeight(Length(Auto));
-    }
-#endif
+    // Height is locked to auto.
+    style->setHeight(Length(Auto));
 
     // White-space is locked to pre
     style->setWhiteSpace(PRE);
